// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pruebas en GifExpertApp debe mostrar bien el componente 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
</Fragment>
`;

exports[`pruebas en GifExpertApp debe mostrar una lista de categorias 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <GifGrid
    category="Dragol Ball"
    key="Dragol Ball"
  />
  <GifGrid
    category="Ricky and Morty"
    key="Ricky and Morty"
  />
</Fragment>
`;
